<resources>
    <string name="app_name">SDPScramble</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title">The Best Word Scramble Game!</string>
    <string name="password">Password (optional)</string>
    <string name="username">Username</string>
    <string name="login_or_signup">Login or Signup</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="desired_username">Desired Username</string>
    <string name="email">Email</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="logout">Log Out</string>
    <string name="title_activity_view_player_stat">ViewPlayerStatActivity</string>
</resources>
