...
        android:layout_height="wrap_content"
        android:text="Type Answer"
        android:layout_marginTop="5dp"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/etAnswer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id = "@+id/bExit"
            android:text = "Exit"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginBottom="35dp"
            android:textSize="14sp" />

        <Button
            android:id = "@+id/bSubmit"
            android:text = "Submit"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginBottom="35dp"
            android:textSize="14sp" />

...

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id = "@+id/bCreateS"
            android:text = "Create Scramble"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="14sp" />

...
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id = "@+id/bViewPStat"
            android:text = "View Player Stat"
            android:layout_width="0dp"
            android:layout_weight="1"

            android:layout_height="wrap_content"
            android:textSize="14sp" />

        <Button
            android:id = "@+id/bViewSStat"
            android:text = "View Scramble Stat"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="14sp" />
    </LinearLayout>

...
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textSize="14sp" />
        <Button
            android:id = "@+id/bBack"
            android:text = "Back AccountView"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textSize="14sp" />

...
