...
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="Scramble Statistics"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textStyle="bold" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
...
            android:layout_height="wrap_content"
            android:stretchColumns="1">

            <TableRow>

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:padding="3dip"
                    android:text=" ScrambleID "
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/name1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="left"
                    android:text="TotalSolved" />

                <TextView
                    android:id="@+id/name2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="left"
                    android:text=" isSolved " />

                <TextView
                    android:id="@+id/name3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="left"
                    android:text=" isCreator " />

                <TextView
                    android:id="@+id/name4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="left"
                    android:text=" isProgress " />

...
